--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<!-- MyBatis -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		
 		<!-- for unit test -->
 		<dependency>
 			<groupId>junit</groupId>
